force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <description>Indicates the status of a credit application for this account.</description>
    <inlineHelpText>Has a Credit Application been submitted for this Account?</inlineHelpText>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>