force-app/main/default/objects/Account/fields/Match_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will match the Shipping Postal Code to that of the Billing Address</description>
    <inlineHelpText>If checked, will match the Shipping Postal Code to that of the Billing Address</inlineHelpText>
    <label>Match Billing Address</label>
    <type>Checkbox</type>
</CustomField>