force-app/main/default/objects/Account/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <description>Person from Master Data</description>
    <label>Person</label>
    <length>18</length>
    <referenceTo>Person__x</referenceTo>
    <relationshipLabel>Master Data</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>