force-app/main/default/objects/Account/fields/Publish_Satus__c.field-meta.xml
<CustomField>
    <fullName>Publish_Satus__c</fullName>
    <label>Publish Satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ReadyToPublish</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>