force-app/main/default/objects/Account/fields/Total_spending__c.field-meta.xml
<CustomField>
    <fullName>Total_spending__c</fullName>
    <label>Total spending</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>