force-app/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <description>Revenue must be 20 times the minimum spending</description>
    <errorConditionFormula>AnnualRevenue  &lt;  20 *  $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c</errorConditionFormula>
    <errorMessage>Minimum Annual Spending not met</errorMessage>
</ValidationRule>